13-webgl/extras/LightingWithTexture.css
:root {
    --canvasw: 900px;
    --canvash: 600px;
    --mleft: 10px;
}

* {
    margin: 0;
    padding: 0;
}

body {
    background-color: antiquewhite;
}
#theCanvas {
    width: var(--canvasw);
    height: var(--canvash);
    margin-left: var(--mleft);
    cursor: crosshair;
}
#interface {
    width: var(--canvasw);
    margin-left: calc(var(--mleft) + 20px);
    margin-bottom: 20px;
}
label,
#models,
#locInfo {
    font-size: x-large;
    line-height: 200%;
}
#models {
    font-size: 200%;
    width: 40%;
}
#legenda {
    float: right;
    width: fit-content;
    margin: 0 10px 0 0;
    text-align: center;
}
.imgcontainer {
    position: relative;
    width: fit-content;
    touch-action: manipulation;
    cursor: crosshair;
}
#canvasimg {
    position: absolute;
    width: fit-content;
    top: 0px;
    left: 0px;
    pointer-events: none;
    z-index: 1;
}
.sideBySide {
    float: left;
    margin-right: 60px;
}
.sideBySide:nth-last-child(1) {
    margin-right: 0;
    padding-right: 0;
}
#models,
#country,
#screenshot,
button {
    font-size: 250%;
    margin-right: 30px;
    padding: 0 40px 0 40px;
    border: 0px;
    outline: 0px;
    border-radius: 8px;
    background-color: lightsteelblue;
    color: black;
    height: 2em;
    margin-right: 0.5em;
    touch-action: manipulation;
}
#country,
#screenshot {
    font-size: 200%;
    padding: 0 40px 0 10px;
    width: 190px;
    margin: 10px 18px 10px 0;
}
label {
    margin-right: 40px;
}
.lbllatlon {
    margin: 0 0 0 25px;
}
.dms {
    height: 30px;
    flex: 0 0 200px;
    margin: 0 0 0 5px;
    width: 170px;
    font-size: 20px;
}
.checkbox {
    column-count: 2;
    width: 50em;
    list-style: none;
    margin-right: 0;
    padding: 0;
}
#tooltip,
#canvastip {
    position: absolute;
    z-index: 2;
    background-color: rgba(300 300 300 / 0.5);
    color: black;
    padding: 3px;
    font-size: small;
    display: none;
    pointer-events: none;
}
#cls,
#anim,
#print {
    font-size: 200%;
    padding: 10px;
}
datalist {
    display: flex;
    justify-content: space-between;
    margin: 0.5em 0;
    color: red;
    width: 53%;
}
option {
    padding: 0;
}
#lblTimeline {
    margin-left: 5em;
    font-size: 150%;
    font-style: italic;
}
#sites,
#doc {
    margin-top: 2em;
    padding: 0;
    font-size: 150%;
    font-style: italic;
    color: darkblue;
    width: fit-content;
    text-align: center;
}
#textures {
    font-size: 120%;
    background-color: wheat;
    color: black;
    border: solid 5px lightsteelblue;
    border-radius: 10%;
}

